// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Paragraph dangerouslySetInnerHTML renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

<div
  class="c0"
>
  <p
    class="c1"
  >
    This is a dangerouslySetInnerHTML!
  </p>
</div>
`;

exports[`Paragraph margin renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  margin: 12px;
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

.c2 {
  margin: 24px;
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

.c3 {
  margin: 48px;
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

.c4 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

.c5 {
  margin-bottom: 12px;
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

.c6 {
  margin-top: 12px;
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

<div
  class="c0"
>
  <p
    class="c1"
  />
  <p
    class="c2"
  />
  <p
    class="c3"
  />
  <p
    class="c4"
  />
  <p
    class="c5"
  />
  <p
    class="c6"
  />
</div>
`;

exports[`Paragraph maxLines renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

<div
  class="c0"
>
  <p
    class="c1"
  />
</div>
`;

exports[`Paragraph renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

<div
  class="c0"
>
  <p
    class="c1"
  />
</div>
`;

exports[`Paragraph size renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 14px;
  line-height: 20px;
  max-width: 336px;
}

.c2 {
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

.c3 {
  font-size: 22px;
  line-height: 28px;
  max-width: 528px;
}

.c4 {
  font-size: 26px;
  line-height: 32px;
  max-width: 624px;
}

.c5 {
  font-size: 34px;
  line-height: 40px;
  max-width: 816px;
}

.c6 {
  font-size: 18px;
  line-height: 24px;
  max-width: none;
}

.c7 {
  font-size: 10px;
  line-height: normal;
}

<div
  class="c0"
>
  <p
    class="c1"
  />
  <p
    class="c2"
  />
  <p
    class="c3"
  />
  <p
    class="c4"
  />
  <p
    class="c5"
  />
  <p
    class="c6"
  />
  <p
    class="c2"
  />
  <p
    class="c7"
  />
</div>
`;

exports[`Paragraph size renders outside grommet wrapper 1`] = `
.c0 {
  font-size: 14px;
  line-height: 20px;
  max-width: 336px;
}

<p
  class="c0"
/>
`;

exports[`Paragraph textAlign renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
  text-align: left;
}

.c2 {
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
  text-align: center;
}

.c3 {
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
  text-align: right;
}

.c4 {
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
  text-align: justify;
}

<div
  class="c0"
>
  <p
    class="c1"
  />
  <p
    class="c2"
  />
  <p
    class="c3"
  />
  <p
    class="c4"
  />
</div>
`;

exports[`theme skeleton gap 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  background-color: #EDEDED;
  color: #444444;
  height: 18px;
  width: 100%;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  background-color: #EDEDED;
  color: #444444;
  height: 18px;
  width: 30%;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  background-color: #EDEDED;
  color: #444444;
  height: 14px;
  width: 100%;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  background-color: #EDEDED;
  color: #444444;
  height: 14px;
  width: 30%;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  background-color: #EDEDED;
  color: #444444;
  height: 22px;
  width: 100%;
}

.c11 {
  display: flex;
  box-sizing: border-box;
  background-color: #EDEDED;
  color: #444444;
  height: 22px;
  width: 30%;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background: background;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  max-width: 432px;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  max-width: 336px;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  max-width: 528px;
}

.c4 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 48px;
}

@media only screen and (max-width: 768px) {
  .c4 {
    height: 24px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          aria-hidden="true"
          class="c3"
        />
        <div
          class="c4"
        />
        <div
          aria-hidden="true"
          class="c3"
        />
        <div
          class="c4"
        />
        <div
          aria-hidden="true"
          class="c5"
        />
      </div>
      <div
        class="c6"
      >
        <div
          aria-hidden="true"
          class="c7"
        />
        <div
          class="c4"
        />
        <div
          aria-hidden="true"
          class="c7"
        />
        <div
          class="c4"
        />
        <div
          aria-hidden="true"
          class="c8"
        />
      </div>
      <div
        class="c9"
      >
        <div
          aria-hidden="true"
          class="c10"
        />
        <div
          class="c4"
        />
        <div
          aria-hidden="true"
          class="c10"
        />
        <div
          class="c4"
        />
        <div
          aria-hidden="true"
          class="c11"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
